# LunarAtlas

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_AVAILABILITY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  backend_setup.md  batch_process_libs.py  environment.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Ablation/: ablation_guide.md  ablation_studies.md
Abstraction/: abstraction_layer.md
Benchmarks/: benchmarks.md  run_benchmarks.py
Configs/: env.template
Pipeline/: pipeline_log.json  pipeline_logger.py  run_pipeline.ps1  run_pipeline.sh  step1_structure_study.py  step2_process_l1_data.py  step3_graph_plotting.py  step4_nist_verification_logs.py  step5_md5_checksums.py  step6_segregate_data_folders.py  step7_db_ingestion.py  step8_data_verification.py  study_summary.json
app/: config.py  main.py
app/api/v1/: endpoints.py
app/cache/: redis_cache.py
app/core/: downsampling.py
app/database/: connection.py
app/schemas/: spectral.py
configs/: schema.sql
core/client/: .gitignore  index.html  package-lock.json  package.json  postcss.config.js  vercel.json  vite.config.ts
core/client/src/: App.css  App.tsx  index.css
core/client/src/context/: AuthContext.tsx  ThemeContext.tsx
core/client/src/hooks/: useDownsampling.ts
core/client/src/pages/: DashboardPage.tsx  DeveloperApiPage.tsx  DocsPage.css  DocsPage.tsx  GraphDisplay.tsx  GraphPage.tsx  HealthPage.tsx  HomePage.css  HomePage.tsx  PaperPage.css  PaperPage.tsx  PipelinePage.tsx  SpectralAnalyzerPage.tsx
core/client/src/services/: apiService.ts  mockDataService.ts
core/client/src/tests/: lttb.test.ts
core/client/src/utils/: mockData.ts  spectralUtils.ts
core/client/src/workers/: downsampleWorker.ts
core/server/: backend_setup.md  env.template  pipeline_log.json  requirements.txt  setup.sh  test_redis.py
core/server/alembic/: env.py
core/server/alembic/versions/: 23fd4d2169a9_baseline_schema.py  778785292393_baseline_schema.py
core/server/app/: config.py  main.py
core/server/app/cache/: redis_cache.py
core/server/configs/: migration_api_keys.sql  supabase_rls.sql
core/server/scripts/: check_vals.py  insert_test_data.py  investigate_db.py  nist_seed.py
core/server/tests/: performance_test.py  test_denoising.py  test_downsampling.py
cron_jobs/: .env.example  README.md  backup.sh  keep_alive.py  requirements.txt
datasets/processed/: checksums.md5
docs/: README.md  what_and_why_downsampling.md
docs/ablastion study/: ablation_report.tex  ablation_section.tex
docs/ablation_study/: ablation_report.tex  ablation_section.tex
docs/api/: README.md  postman_collection.json
docs/paper/: LunarAtlas_corrected (1).docx  LunarAtlas_corrected_text.txt  check_latex.py  draft.tex  draft1.tex  draft2.tex  draft3.tex  draft4.tex  draft5.tex  draft6.tex  draft7.tex  latest_draft.tex  main.tex  new.tex  paper.bib  paper.md  paper.tex  softwarex-software-update-template.tex
evaluation/: evaluation_framework.md
experiment/: generate_ablation_guide_pdf.py  run_ablation_experiment.py  run_full_ablation.py
figures/: downsampling_eval_results.json  evaluate_downsampling.py  fig1_architecture.py  fig2_reshape_schematic.py  fig3_pre_post_overlay.py  fig4_peak_comparison.py  fig5_nist_overlay.py  fig6_adaptive_zoom.py  generate_all_figures.py  generate_publication_plots.py
main-algo/: main_test.py
processing_scripts/: graph_generation.py  measurement_calibrated_db_ingestion.py  measurement_clean_db_ingestion.py  observation_db_ingestion.py  observation_file_info_db_ingestion.py  plot_libs_spectra.py  schema_and_missionToObservation_db_ingestion.py  spectral_data_calibrated_db_ingestion.py
publication_tables/: benchmark_db.py  table10_api_performance.py  table3_cleaning.py  table4_variability.py  table5_6_7_8_downsampling.py  table9_nist_matches.py
scripts/: batch_process_libs.py  graph_generation.py  observation_file_info_db_ingestion.py  run_full_ablation.py  spectral_data_clean_db_ingestion.py
server/: setup.sh
test-algo/: README.md  quickstart.sh
test-algo/backend/: main.py  requirements.txt  setup_database.py
test-algo/backend/venv311/: pyvenv.cfg
test-algo/frontend/: package-lock.json
test-algo/frontend/public/: index.html
test-algo/frontend/src/: App.css  App.js
tests/: performance_test.py  test_downsampling.py  test_lttb_algorithm.py  test_pipeline_processing.py
tests/test-algo/: .gitignore  README.md
tests/test-algo/backend/: main.py  test_api.py
tests/test-algo/frontend/: package.json
(+4288 files in other folders)
